finish browser action

--- a/popups/enabled.html
+++ b/popups/enabled.html
@@ -3,5 +3,5 @@
   <body>
     <button id="my-button">click me</button>
   </body>
-  <script src="Hello.js"></script>
+  <script src="../Hello.js"></script>
 </html>
