add button to page

--- a/popups/disabled.html
+++ b/popups/disabled.html
@@ -1,3 +1,4 @@
+<script src="../shared.js"></script>
 <style>
   html, body {
     font-size: 14px;
@@ -14,5 +15,5 @@
 <p>
   <b>This page isn&rsquo;t allowed to use SAP Uberbot.</b>
   <br />
-  If this seems wrong, follow the <a href="#">troubleshooting instructions</a>.
+  If this seems wrong, follow the <a href="https://www.google.com/">troubleshooting instructions</a>.
 </p>
