--- a/popups/enabled.html
+++ b/popups/enabled.html
@@ -1,7 +1,18 @@
-<html>
-  <head>sap uberbot</head>
-  <body>
-    <button id="my-button">click me</button>
-  </body>
-  <script src="../Hello.js"></script>
-</html>
+<style>
+  html, body {
+    font-size: 14px;
+    min-width: 460px;
+    min-height: 39px;
+  }
+  body {
+    margin: 8px;
+  }
+  hr {
+    width: 100%;
+  }
+</style>
+<p>
+  <b>SAP Uberbot is running. &#x2705;</b>
+  <br />
+  Please enjoy it! &#x1F44F;&#x1F44F;&#x1F44F;
+</p>
